k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    description: "Kimi Coding Documentation"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
  labels:
    env: prod
    app: kimi-coding-docs
  name: kimi-coding-docs
  namespace: agent
spec:
  ingressClassName: ingress-nginx-in-nginx
  rules:
  - host: www.kimi.com
    http:
      paths:
      - backend:
          service:
            name: kimi-coding-docs
            port:
              name: http
        path: /coding/docs/
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - www.kimi.com
    secretName: tls-kimi-com
